extend scripts api
